# protogine

./: CMakeLists.txt  Dependencies.cmake
shaders/: main.frag  main.vert
src/: CMakeLists.txt  application.cpp  application.h  inputcodes.h  main.cpp
src/graphics/: CMakeLists.txt  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  texture.cpp  texture.h
src/platform/: CMakeLists.txt  filesystem.cpp  filesystem.h  graphics.cpp  graphics.h  graphics.hpp  sdl.h  window.h
src/rendering/: CMakeLists.txt  camera.cpp  camera.h  light.h  mesh.cpp  node.h  pipeline.cpp  render.hpp  renderer.cpp  renderer.h  scene.cpp  scene.h  texture.cpp
src/services/: CMakeLists.txt  global_scene.cpp  global_scene.h  input.cpp  input.h  log.cpp  log.h  resource_manager.cpp  resource_manager.h
